# bethel

./: Cargo.toml  Pipfile  README.md  pyproject.toml
bethel/: __init__.py  __main__.py  database.py
bethel/setup/: __init__.py  bibles.py  mlphone.py  songs.py  static.py
bethel/static/css/: index.css  presentation.css
bethel/static/js/: presentation.js
data/: songs.db
setup/: get_bibles.py
src/: databases.rs  main.rs
static/: index.html  presentation.html
static/css/: font.css  index.css
static/js/: index.js  transliteration.js
